--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "parcel": "^2.8.3",
-      "typescript": "^4.9.5"
+        "parcel": "^2.8.3",
+        "typescript": "^4.9.5"
+    },
+    "devDependencies": {
+        "@parcel/transformer-sass": "^2.8.3"
     }
-  }
+}
